# mgl03-Zigbee-NCP-firmware

./: .gitignore  README.md  gbl_metadata.yaml  predef.h  vscode.conf  zigbee_ncp.Makefile  zigbee_ncp.custom_argvars  zigbee_ncp.ewd  zigbee_ncp.ewp  zigbee_ncp.ewt  zigbee_ncp.eww  zigbee_ncp.ipcf  zigbee_ncp.project.mak  zigbee_ncp.slcp  zigbee_ncp.slps
autogen/: linkerfile.icf  linkerfile.ld  sl_component_catalog.h  sl_event_handler.c  zigbee_ncp_callback_dispatcher.c  zigbee_ncp_callback_dispatcher.h  zigbee_stack_callback_dispatcher.c  zigbee_stack_callback_dispatcher.h
autogen/.slc_state/: .crc_config.crc
config/: nvm3_default_config.h  sl_iostream_usart_vcom_config.h  sl_zigbee_pro_stack_config.h
ewarm-iar/exe/: gbl_metadata.json  zigbee_ncp.gbl  zigbee_ncp.out  zigbee_ncp.s37
zigbee_ncp_cmake/: CMakePresets.json  toolchain.cmake  zigbee_ncp.cmake
zigbee_ncp_iar_cmake/: CMakeLists.txt  toolchain.cmake  zigbee_ncp.cmake
